RESOLVED FIXED300597
[FairPlay/MSE] regression tests are disabled
https://bugs.webkit.org/show_bug.cgi?id=300597
Summary [FairPlay/MSE] regression tests are disabled
Jean-Yves Avenard [:jya]
Reported 2025-10-12 18:25:43 PDT
All FairPlay regression tests have been disabled over the years. We need to re-enable them.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-12 18:25:49 PDT
Jean-Yves Avenard [:jya]
Comment 2 2025-10-12 20:25:50 PDT
EWS
Comment 3 2025-10-14 04:31:49 PDT
Committed 301468@main (c4afabf9c6d1): <https://commits.webkit.org/301468@main> Reviewed commits have been landed. Closing PR #52211 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.