[FairPlay/MSE] regression tests are disabled https://bugs.webkit.org/show_bug.cgi?id=300597 rdar://162491649

Reviewed by Youenn Fablet.

Code for MSE/EME was dependent on supportsAttachContentKey() to return true.
However, on open source build, those would have always always returned false.
Once the AVContentKeySession became the default (macOS sonoma and later)
the tests would have started to fail. All MSE/FairPlay tests had been
marked as failing over the years, removing critical testing infrastructure.

We remove those tests, and migrate those to builds using the internal SDK.

* LayoutTests/platform/mac-sequoia-wk2/http/tests/media/fairplay/fps-mse-attach-cdm-after-key-exchange-expected.txt: Removed.
* LayoutTests/platform/mac-wk2/http/tests/media/fairplay/fps-mse-attach-cdm-after-key-exchange-expected.txt: Removed.
* LayoutTests/platform/mac-wk1/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::SourceBufferPrivateAVFObjC::attachContentKeyToSampleIfNeeded):
(WebCore::supportsAttachContentKey): Deleted.

Canonical link: https://commits.webkit.org/301468@main